<resources>
    <string name="app_name">doctors_appointment_hospital</string>
    <string name="contacts">Контакты</string>
    <string name="make_an_appointment">Записаться на приём</string>
    <string name="email_hosp">Почта: dom-zdorovya@yandex.ru</string>
    <string name="telephone_hosp">Телефон: 8(945)-598-49-00</string>
    <string name="adress">Адрес: г.Москва, ул. Фадеева, 8с3</string>
    <string name="Back">назад</string>
    <string name="back">Назад</string>
    <string name="medical_specialty_record_confirm">--Специальность--</string>
    <string name="name_doctor_record_confirm">доктор ФИО</string>
    <string name="date_and_time">Время и дата:</string>
    <string name="date_and_time_record_conf">--дата и время--</string>
    <string name="adress_record_confirm">г.Москва, ул. Фадеева, 8с3</string>
    <string name="GetName_data_filling">Введите ФИО</string>
    <string name="information_succes_enter">В случае возникновения вопросов звоните на номер +79999999999 или пишите на почту xxxxx@xx.ру</string>
</resources>